Changed public folder to docs

--- a/vhost.conf
+++ b/vhost.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php index.html;
-    root /usr/src/app/public;
+    root /usr/src/app/docs;
     location / {
         try_files $uri /index.html?$args;
     }
