Changed site's URL

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://omatacavalo.infoamazonia.org",
+  "homepage": "https://matacavalo.infoamazonia.org",
   "name": "infoamazonia",
   "version": "0.0.0",
   "description": "",
