--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node_modules/.bin/webpack-dev-server --host 0.0.0.0",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "setup": "rm -rf public/*",
-    "build": "webpack --config webpack.config.js -p",
-    "watch": "npm run setup && webpack --config webpack.config.js --watch",
-    "clean": "gh-pages-clean",
     "predeploy": "NODE_ENV=production npm run build",
     "deploy": "gh-pages -d public",
-    "manage:translations": "node ./translationRunner.js"
+    "clean": "gh-pages-clean",
+    "start": "./node_modules/.bin/webpack-dev-server --host 0.0.0.0",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "setup": "rm -rf public/*",
+    "build": "webpack --config webpack.config.js -d --env production",
+    "watch": "npm run setup && webpack --config webpack.config.js --watch",
+    "manage:translations": "node ./translationRunner.js",
+    "dev": "./node_modules/.bin/webpack-dev-server --content-base"
   },
   "repository": {
     "type": "git",
